add contentsidebar select function

--- a/front-end/src/components/Header.css
+++ b/front-end/src/components/Header.css
@@ -1,16 +1,22 @@
 .header-container{
+    position: static;
     background: rgb(158, 206, 180);
     height: 2rem;
     width: 100vw;
 }
-.menu{
+.viewStatus{
     position: absolute;
+    left: 4vw;
+    display: flex;
+    line-height: 2rem;
+    color: white;
+    font-weight: bold;
 }
 .clock{
     position: absolute;
     right: 5vw;
-    line-height: 2rem;
     display: flex;
+    line-height: 2rem;
     color: white;
     font-weight: bold;
 }
