--- a/front-end/src/components/Sidebar.css
+++ b/front-end/src/components/Sidebar.css
@@ -1,7 +1,15 @@
 .Side-bar{
-    position: fixed;
+    position: absolute;
     background: rgb(240, 240, 240);
     transition: all 1s;
     height: 100vh;
-    width: 15vw;
+    width: 240px;
+    padding: 20px;
+}
+.list{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    background: transparent;
+    font-size: inherit;
 }
